--- a/index.html
+++ b/index.html
@@ -17,6 +17,16 @@
     <link rel="icon" type="image/png" sizes="32x32" href="icons/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon-16x16.png" />
     <link rel="icon" type="image/ico" href="favicon.ico" />
+    <script
+      src="https://cdn.tiny.cloud/1/4ptvgnmpnvmkjk2nhy5q64lkm5z2rpfkmwfwdzl9j6tuq7n6/tinymce/8/tinymce.min.js"
+      referrerpolicy="origin"
+      crossorigin="anonymous"
+    ></script>
+    <!-- <script
+      src="https://cdn.tiny.cloud/1/no-api-key/tinymce/8/tinymce.min.js"
+      referrerpolicy="origin"
+      crossorigin="anonymous"
+    ></script> -->
   </head>
   <body>
     <!-- quasar:entry-point -->
